# bamm2

./: CMakeLists.txt  Event.h  EventMover.cc  EventMover.h  MCMC.h  Model.h  ModelProposal.h  Node.h  README.md  Random.cc  Tree.h
models/: TestModel.h  TestModelProposal.cc  TreeModel.cc  TreeModelMCMC.h  TreeModelProposal.cc
source/: Event.cc  Event.h  EventMover.cc  EventMover.h  MCMC.cc  MCMC.h  Model.cc  Model.h  ModelProposal.cc  ModelProposal.h  Node.cc  Node.h  Random.cc  Random.h  SpExModel.cc  Tree.cc  Tree.h  UniformProposer.cc  UniformProposer.h
source/core/: Event.h  MCMC.cc  MCMC.h  Model.cc  Model.h  ModelProposal.cc  ModelProposal.h  Node.cc  Proposer.h  Random.h  Tree.h
source/models/: SpExModel.cc  SpExModel.h  TestModel.cc  TestModel.h  TestModelProposal.cc  TestModelProposal.h  TreeModel.cc  TreeModel.h  TreeModelMCMC.h  TreeModelProposal.cc  TreeModelProposal.h
test-programs/: notes.txt  test-MCMC.cc  test-TreeModelMCMC.cc
tests/: BasicTreeFixture.h  EventMoverTest.cc  EventTest.cc  Makefile  TreeModelProposalTest.cc  TreeModelTest.cc  UniformProposerTest.cc
